--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     <module>pinot-perf</module>
     <module>pinot-integration-tests</module>
     <module>pinot-distribution</module>
-    <module>pinot-connectors</module>
+    <!--module>pinot-connectors</module-->
   </modules>
 
   <licenses>
